<resources>
    <string name="app_name">精准抓潜</string>
    <string name="service_tel">077-132949030</string>
    <string name="service_wechat">kuajingquan</string>
    <string name="service_qq">3496183659</string>
    <string name="limit_wechat">yskjar01</string>
    <string name="permission_rationale_message">您已经拒绝我们申请授权，请同意授权，\n否则功能将无法正常使用!</string>
    <string name="permission_denied_forever_message">我们需要一些您拒绝的权限或系统申请失败，\n请手动设置为APP授权，否则功能将无法正常使用!</string>
    <string name="ttf_logo">&#xe636;</string>
    <string name="ttf_phone">&#xe79e;</string>
    <string name="ttf_pwd">&#xe601;</string>
    <string name="ttf_wechat">&#xe66f;</string>
    <string name="ttf_qq">&#xe65b;</string>
    <string name="ttf_back">&#xe604;</string>
    <string name="ttf_recommended">&#xe637;</string>
    <string name="ttf_code">&#xe618;</string>
    <string name="ttf_sign">&#xe602;</string>
    <string name="ttf_vip">&#xe69a;</string>
    <string name="ttf_right">&#xe605;</string>
    <string name="ttf_share">&#xe6b2;</string>
    <string name="ttf_service">&#xe603;</string>
    <string name="ttf_feedback">&#xe660;</string>
    <string name="ttf_source">&#xe616;</string>
    <string name="ttf_name">&#xe606;</string>
    <string name="ttf_tel">&#xe60e;</string>
    <string name="ttf_address">&#xe6a6;</string>
    <string name="ttf_address_detalis">&#xe7e2;</string>
    <string name="key_title_chihe">&#xe611;</string>
    <string name="key_title_zhusu">&#xe617;</string>
    <string name="key_title_chuxing">&#xe66c;</string>
    <string name="key_title_yule">&#xe607;</string>
    <string name="key_title_shenghuo">&#xe627;</string>
    <string name="key_title_jingdian">&#xe609;</string>
    <string name="key_title_gouwu">&#xe66a;</string>
    <string name="ttf_explain_app">&#xe608;</string>
    <string name="ttf_loginout">退出登录</string>
    <string name="ttf_setting">&#xe6bc;</string>
    <string name="ttf_chace">&#xe6c0;</string>
    <string name="ttf_data">&#xe728;</string>
    <string name="feedback">意见反馈</string>
    <string name="service">联系客服</string>
    <string name="ttf_baidu_map">&#xe640;</string>
    <string name="ttf_gaode_map">&#xe60f;</string>
    <string name="ttf_meituan"> &#xe6b0;</string>
    <string name="ttf_eleme">&#xe776;</string>
    <string name="ttf_taobao">&#xe641;</string>
    <string name="ttf_jd">&#xe60a;</string>
    <string name="ttf_weipinhui">&#xe8ef;</string>
    <string name="platform_data_count">已抓潜%d条</string>
    <string name="hint_addContact_yes">已保存联系人到通讯录</string>
    <string name="hint_addContact_no">保存联系人失败</string>
    <string name="hint_confirm_delete_platform_data">确定要删除%s的所有数据吗?</string>
    <string name="hint_confirm_delete_list_current_data">确定要删除当前列表的所有数据吗?</string>
    <string name="hint_delete_platform_data_ok">已删除%s数据</string>
    <string name="hint_delete_platform_data_no">删除%s数据失败</string>
    <string name="ttf_no_data_icon"> &#xe661;</string>
    <string name="text_all_data_count">%d\n今日累计</string>
    <string name="text_save_data_count">%d\n保存条数</string>
    <string name="text_integral_count">%d\n积分</string>
    <string name="d_create_contact">保存到通讯录</string>
    <string name="ttf_note">&#xe64e;</string>
    <string name="ttf_people">&#xe60c;</string>
    <string name="hint_name_no_null">姓名不能为空</string>
    <string name="hint_phone_or_tel_all_null">手机和座机至少填写一项</string>
    <string name="hint_avatar_edit_ok">头像修改成功</string>
    <string name="hint_photo_no_file_reselect">图片不存在,请重新选择</string>
    <string name="hint_nickname_edit_ok">昵称修改成功</string>
    <string name="hint_nickname_edit_no">昵称修改失败</string>
    <string name="hint_nickname_no_data">昵称不能为空</string>
    <string name="title_edit_info">编辑信息</string>
    <string name="text_save">保存</string>
    <string name="title_agreement">精准抓潜协议</string>
    <string name="title_edi_pwd">修改密码</string>
    <string name="hint_phone_edit_no">请输入有效的手机号码</string>
    <string name="hint_input_new_pwd">请输入新密码</string>
    <string name="hint_new_pwd_6">新密码最少6位</string>
    <string name="hint_pwd_edit_ok">修改密码成功</string>
    <string name="hint_user_no">用户不存在</string>
    <string name="text_send_code">发送验证码</string>
    <string name="title_explain_app">关于我们</string>
    <string name="text_app_version">当前版本:%s</string>
    <string name="hint_input_phone">请输入有效的手机号码</string>
    <string name="hint_input_pwd">请输入密码</string>
    <string name="hint_pwd_6">密码最少6位</string>
    <string name="hint_pwd_no">密码错误</string>
    <string name="title_opinion_feedback">意见反馈</string>
    <string name="title_regist">注册</string>
    <string name="text_regist_agreed">注册即表示同意</string>
    <string name="text_agreement">　《精准抓潜协议》　</string>
    <string name="hint_input_recommended_phone">请输入有效的推荐人手机号码</string>
    <string name="hint_user">用户</string>
    <string name="text_user">用户</string>
    <string name="hint_regist_no">注册失败,请稍后再试</string>
    <string name="hint_regist_ok">注册成功</string>
    <string name="hint_phone_old_regist">该手机号已被注册</string>
    <string name="title_setting">设置</string>
    <string name="title_vip">会员</string>
    <string name="hint_buy_vip_des">购买:%1$s(%2$s)</string>
    <string name="hint_no_data">%s\n暂无数据</string>
    <string name="hint_data_collect_ok">%s抓潜完成</string>
    <string name="hint_data_collect_no">%s抓潜失败</string>
    <string name="hint_stop_collect">%s停止抓潜</string>
    <string name="hint_confirm_delete_all_contact">查询到保存的联系人数量有%d条\n确定要从手机通讯录删除它们吗?</string>
    <string name="hint_text">提示</string>
    <string name="hint_confirm">确定</string>
    <string name="hint_cancel">取消</string>
    <string name="hint_delete_yes">删除成功</string>
    <string name="hint_delete_no">删除失败</string>
    <string name="hint_no_contact_data">没有联系人数据</string>
    <string name="hint_delete_chace_ok">清除成功</string>
    <string name="hint_delete_chace_no">清除失败</string>
    <string name="hint_confirm_delete_all_platform_data">确定要删除所有鱼塘的%d条数据吗?</string>
    <string name="hint_outlogin_user">确定要退出当前用户吗?</string>
    <string name="ttf_delete_contact">&#xe61e;</string>
    <string name="hint_collect_ing">正在抓潜中,请稍后...</string>
    <string name="hint_no_data_2">暂无数据</string>
    <string name="hint_input_collect_city">请设置抓潜范围</string>
    <string name="hint_input_collect_key">请设置关键词</string>
    <string name="ttf_collect_setting">&#xe610;</string>
    <string name="title_collect_setting">抓潜设置</string>
    <string name="ttf_data_phone_type">&#xe612;</string>
    <string name="ttf_collect_speed">&#xe6e2;</string>
    <string name="hint_confirm_export_current_platform_data">鱼塘数量:%2$d\n当前鱼塘:%1$s\n确定要全部导出吗?</string>
    <string name="hint_confirm_export_current_platform_data_marketing">导出数量:%d\n确定要全部导出吗?</string>
    <string name="hint_export_contact">导出到手机通讯录</string>
    <string name="hint_export_csv">导出.csv文件</string>
    <string name="hint_export_txt">导出.txt文件</string>
    <string name="hint_export_excel">导出excel文件</string>
    <string name="text_app_share_url">精准抓潜,流量变现,专业值得信赖!\n欢迎下载体验:https://www.pgyer.com/diamond</string>
    <string name="hint_share_error">分享失败</string>
    <string name="hint_export_file_ok_path">文件导出成功:%s</string>
    <string name="hint_export_no">文件导出失败</string>
    <string name="hint_network_error">网络错误</string>
    <string name="hint_network_no_connected">网络链接不可用</string>
    <string name="hint_no_login">未登录</string>
    <string name="hint_sign_rep">今天已经签到过啦</string>
    <string name="hint_sign_error">签到失败</string>
    <string name="hint_sign_ok">签到成功\n积分+%d</string>
    <string name="key_title_liren">&#xe613;</string>
    <string name="key_title_jiaoyu">&#xe691;</string>
    <string name="key_title_muying">&#xe6fc;</string>
    <string name="key_title_qinzi">&#xe665;</string>
    <string name="key_title_chongwu">&#xe619;</string>
    <string name="key_title_fushi">&#xe768;</string>
    <string name="key_title_hunqing">&#xe620;</string>
    <string name="key_title_shipin">&#xe6ef;</string>
    <string name="key_title_wuliu">&#xe65c;</string>
    <string name="key_title_shoushi">&#xe71b;</string>
    <string name="key_title_qiche">&#xe680;</string>
    <string name="key_title_shuma">&#xe6cf;</string>
    <string name="key_title_jiancai">&#xe709;</string>
    <string name="key_title_yiliao">&#xe615;</string>
    <string name="ttf_more">&#xe61b;</string>
    <string name="hint_use_limit">您好,本软件正处于体验阶段,\n如需继续使用请联系微信,\n或输入邀请码</string>
    <string name="hint_input_code">验证码</string>
    <string name="hint_code">邀请码</string>
    <string name="hint_code_error">邀请码无效</string>
    <string name="text_start_collect">开始抓潜</string>
    <string name="text_stop_collect">停止抓潜</string>
    <string name="text_collect_city">抓潜范围</string>
    <string name="text_collect_key">抓潜关键字</string>
    <string name="ttf_key">&#xe6c5;</string>
    <string name="ttf_notice">&#xe6eb;</string>
    <string name="hint_wechat_copy">微信号码已复制</string>
    <string name="hint_input_zh">请输入中文</string>
    <string name="text_copyright">Copyright©%s</string>
    <string name="ttf_yutang1">&#xe61b;</string>
    <string name="ttf_yutang2">&#xe61b;</string>
    <string name="ttf_yutang3">&#xe61b;</string>
    <string name="ttf_yutang4">&#xe61b;</string>
    <string name="ttf_yutang5">&#xe61b;</string>
    <string name="ttf_yutang6">&#xe61b;</string>
    <string name="ttf_yutang7">&#xe61b;</string>
    <string name="text_collect_speed">抓潜速度</string>
    <string name="text_trading">交易大厅</string>
    <string name="ttf_add">&#xe621;</string>
    <string name="hint_select">请选择</string>
    <string name="text_value_key">关键词：%s</string>
    <string name="text_value_city">城　市：%s</string>
    <string name="text_value_count">数　量：%d</string>
    <string name="text_value_source">来　源：%s</string>
    <string name="text_all_data">全部数据</string>
    <string name="text_phone_data">只显示手机</string>
    <string name="text_tel_data">只显示固话</string>
    <string name="ttf_money">&#xe66b;</string>
    <string name="ttf_trading">&#xe622;</string>
    <string name="hint_delete_trading">确定要删除这条交易信息吗？</string>
    <string name="ttf_delete">&#xe623;</string>
    <string name="ttf_screening">&#xe626;</string>
    <string name="ttf_menu">&#xe625;</string>
    <string name="ttf_wallet">&#xe62e;</string>
    <string name="text_piaoliuping">自动漂流瓶</string>
    <string name="manage_bank_card">管理银行卡</string>
    <string name="ttf_industry">&#xe62a;</string>
    <string name="ttf_friend_count">&#xe68e;</string>
    <string name="ttf_price">&#xe629;</string>
    <string name="ttf_wechat2">&#xe633;</string>
    <string name="ttf_describe">&#xe62d;</string>
    <string name="text_bank_card_name">开户行：%s</string>
    <string name="text_bank_card_type">卡类型：%s</string>
    <string name="text_bank_card_code">卡号：%s</string>
    <string name="hint_start_service_qq_chat">即将打开与客服的QQ聊天，\n是否立即前往？</string>
    <string name="text_vip_valid_time">到期时间：%s</string>
    <string name="ttf_file">&#xe638;</string>
    <string name="title_file">我的导出文件</string>
    <string name="ttf_exl">&#xe61d;</string>
    <string name="text_all_delete">全部删除</string>
    <string name="hint_delete_all_file_data">删除后无法恢复，\n确定要删除这%d个数据文件吗？</string>
    <string name="title_sms_batch">群发短信</string>
    <string name="text_buy_account">我要买账号</string>
    <string name="text_sell_account">求购信息</string>
    <string name="text_release">发布</string>
    <string name="text_edit_info">修改信息</string>
    <string name="text_complete">完成</string>
    <string name="text_data_error">数据错误</string>
    <string name="hint_input_city">请输入城市</string>
    <string name="hint_input_industry">请输入行业</string>
    <string name="hint_input_friend_count">请输入好友数量</string>
    <string name="hint_input_friend_count_2">请输入有效的好友数量</string>
    <string name="hint_input_price">请输入价格</string>
    <string name="hint_input_price_2">请输入有效的价格</string>
    <string name="hint_input_weixin">请输入微信号</string>
    <string name="text_select_count">已选择%d个</string>
    <string name="text_select_data">选择数据</string>
    <string name="ttf_sms">&#xe88d;</string>
</resources>