<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_ttf_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ttf_tel"
                android:textSize="18sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/service_tel"
                android:textColor="@color/select_text_blue_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_ttf_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ttf_wechat"
                android:textSize="18sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/service_wechat"
                android:textColor="@color/select_text_blue_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_ttf_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ttf_qq"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/service_qq"
                android:textColor="@color/select_text_blue_color"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"></View>

    </LinearLayout>
</RelativeLayout>