<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tl="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rl_actionbar"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_logo"
            android:gravity="center"
            android:text="@string/text_trading"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tv_platform_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/ttf_wechat"
            android:textColor="@color/select_text_white_color"
            android:textSize="25sp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/ttf_add"
            android:textColor="@color/select_text_white_color"
            android:textSize="25sp" />
    </RelativeLayout>

    <com.flyco.tablayout.SlidingTabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        tl:tl_indicator_color="@color/color_logo"
        tl:tl_indicator_height="3dp"
        tl:tl_indicator_width_equal_title="true"
        tl:tl_tab_padding="22dp"
        tl:tl_tab_space_equal="true"
        tl:tl_textSelectColor="@color/color_logo"
        tl:tl_textUnselectColor="@color/color_text"
        tl:tl_textsize="15sp"
        tl:tl_underline_color="@color/white"
        tl:tl_underline_height="1dp" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v4.view.ViewPager>


</LinearLayout>