<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/actionbar"></include>


    <RelativeLayout

        android:id="@+id/rl_collect_setting"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/item_select"

        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/tv_ttf_collect_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ttf_collect_setting"
            android:textColor="@color/color_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_collect_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_ttf_collect_setting"
            android:text="@string/title_collect_setting"
            android:textColor="@color/color_text" />

        <TextView
            android:id="@+id/tv_ttf_collect_setting_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/ttf_right"
            android:textColor="@color/color_text"
            android:textSize="18sp" />
    </RelativeLayout>

    <View style="@style/view_line"></View>


    <View
        style="@style/view_line"
        android:layout_marginTop="10dp"></View>

    <RelativeLayout

        android:id="@+id/rl_chace"
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:background="@drawable/item_select"

        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/tv_ttf_chace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ttf_chace"
            android:textColor="@color/color_text"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_ttf_chace"
            android:text="清除缓存"
            android:textColor="@color/color_text" />


        <TextView
            android:id="@+id/tv_chace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/tv_ttf_chace_r"
            android:text="0M" />

        <TextView
            android:id="@+id/tv_ttf_chace_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/ttf_right"
            android:textColor="@color/color_text"
            android:textSize="18sp" />
    </RelativeLayout>

    <View style="@style/view_line"></View>


    <RelativeLayout

        android:id="@+id/rl_data"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/item_select"

        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/tv_ttf_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ttf_data"
            android:textColor="@color/color_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_ttf_data"
            android:text="删除数据"
            android:textColor="@color/color_text" />

        <TextView
            android:id="@+id/tv_ttf_data_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/ttf_right"
            android:textColor="@color/color_text"
            android:textSize="18sp" />
    </RelativeLayout>

    <View style="@style/view_line"></View>

    <RelativeLayout

        android:id="@+id/rl_delete_contact"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/item_select"

        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/tv_ttf_delete_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ttf_delete_contact"
            android:textColor="@color/color_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_delete_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_ttf_delete_contact"
            android:text="删除联系人"
            android:textColor="@color/color_text" />

        <TextView
            android:id="@+id/tv_ttf_delete_contact_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/ttf_right"
            android:textColor="@color/color_text"
            android:textSize="18sp" />
    </RelativeLayout>

    <View style="@style/view_line"></View>

    <RelativeLayout
        android:id="@+id/rl_macAddress"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/item_select"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_ttf_macAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/ttf_phone"
            android:textColor="@color/color_text"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_ttf_macAddress"
            android:text="设备唯一识别码"
            android:textColor="@color/color_text" />


        <TextView
            android:id="@+id/tv_macAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="" />

        <!--<TextView-->
        <!--android:id="@+id/tv_ttf_macAddress_r"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:text="@string/ttf_right"-->
        <!--android:textColor="@color/color_text"-->
        <!--android:textSize="18sp" />-->
    </RelativeLayout>

    <View
        style="@style/view_line"
        android:visibility="gone"></View>


    <Button
        android:id="@+id/btn_login_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/select_btn_gray_red_30"
        android:text="退出登录"
        android:textColor="@color/white"
        android:visibility="gone" />

</LinearLayout>